# MyProject2

./: .cursorignore  .cursorindexingignore  .gbrain-source  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Dodgeville_PD_Scheduler.spec  Dodgeville_PD_Scheduler_debug.spec  EVALUATE.txt  Install Always-On UAT.bat  Install Desktop Shortcut.bat  README.md  SCHEDULING_RULES.md  SCHEDULING_RULES.txt  START HERE.bat  Setup Domain Tunnel.bat  Show Remote UAT URL.bat  Start Agent Session.bat  Start Duty Console Online.bat  Start Duty Console.bat  Start Grok.bat  Start Remote UAT Tunnel.bat  Start Scheduler.bat  Start Virtual Lab.bat  TUNNEL_SETUP.md  Uninstall Always-On UAT.bat  alembic.ini  analytics.py  apply_fixes.py  audit.py  auth_password.py  build.bat  build_portable.bat  build_quick.bat  build_test.bat  cli.py  (+35 more)
.claude/: launch.json  settings.json
.cloudflared/: config.yml.example
.github/: dependabot.yml
api/: routes_v1.py  schemas.py
cli/: __init__.py  bid_cmds.py  callback_cmds.py  export_cmds.py  notification_cmds.py  ops_cmds.py  optimizer_cmds.py  payroll_cmds.py  report_cmds.py  request_cmds.py  roster_cmds.py  swap_cmds.py  user_cmds.py
docs/: AGENTS_REFERENCE.md  AGENT_ROUTING.md  AGENT_STABLE.md  AGENT_TOOLKIT.md  AGENT_TRUST_AND_MISTAKES.md  CHRONOS_SOURCES.md  DEPLOYMENT.md  EXTERNAL_TOOL_STACK.md  HANDOFF.md  LE_PRODUCT_PLAYBOOK.md  NEXT_AGENT_PROMPT.md  OPEN_SOURCE_TOOLING.md  POSTGRES_PORT_INVENTORY.md  PROJECT_README.md  RUST_CORE.md  SIMULATOR_NEXT_SESSION_PLAN.md  SIMULATOR_OVERHAUL_PLAN.md  (+10 more)
(+505 files in other folders)
