[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "dodgeville-scheduler"
version = "0.1.0"
requires-python = ">=3.10"
description = "Dodgeville PD Scheduler with optional Rust scheduling core"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "scheduler_core"
manifest-path = "rust/scheduler_core/Cargo.toml"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "build",
    "dist",
    "logs",
    ".grok",
    "rust",
    "terminals",
    "docs/FULL_PROJECT_CODE.txt",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]
"scripts/**" = ["F401", "F841"]
"dev.py" = ["F401"]
"cli.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.codespell]
skip = "*.json,*.png,*.jpg,*.db,*.spec,*.ics"
ignore-words-list = "OT,ot,oT,Ot,OTs,adminstrative,nd,ue,bu,ake,fo,hav,te"
